@@ -2,6 +2,7 @@
   o rename 'no_suggests' parameter as 'no_recommends'
   o rename '--allow-suggests' option as '--allow-recommends'
   o rename '--no-suggests' option as '--no-recommends'
+  o rename '--suggests' option as '--recommends'
 
 Version 7.32 - 5 September 2014
 
